--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,26 @@
 spring:
   application:
-    name: weight-scale
+    name: weisanlu
+  aop:
+    proxy-target-class: true
+    auto: true
+  data:
+    redis:
+      database: 0
+      host: ${JT_REDIS_HOST_PROD:127.0.0.1}
+      port: 6379
+      password: ${JT_REDIS_PWD_PROD:123456}
+      timeout: 5000
+      lettuce:
+        pool:
+          min-idle: 2
 server:
   port: 7878
+
+serial:
+  weisanlu:
+    COM3: "pc:weight:w3road:in"
+    COM4: "pc:weight:w3road:out"
+  meihuadao:
+    COM3: "pc:weight:meihuadao:in"
+    COM4: "pc:weight:meihuadao:out"
